# Forchete

./: Cargo.toml  Dockerfile  LICENSE  README.md  db.json  index.html  styles.css
api/: Cargo.toml
backend/: compose.yaml  dockerfile
backend/api/: Cargo.toml
backend/api/src/: main.rs
backend/db/: Cargo.toml
backend/db/src/: lib.rs
backend/noticia/: Cargo.toml
backend/noticia/src/: lib.rs
backend/scraper/src/utils/: localidades.rs  mod.rs  sites.rs
db/: Cargo.toml
db/src/: lib.rs
fourchete/: package-lock.json  package.json
frontend/: dockerfile  next.config.mjs  next.config.ts  package-lock.json  package.json  postcss.config.cjs  postcss.config.mjs
frontend/public/: sw.js
frontend/src/app/: globals.css  layout.tsx  manifest.json  page.tsx
frontend/src/app/(public)/: service-worker.js
frontend/src/app/lib/: puxarNoticias.tsx
frontend/src/app/noticia/: Noticias.tsx  page.tsx
frontend/src/app/test/: page.tsx
frontend/src/app/test2/: page.tsx
frontend/src/components/feedback/: NoticiasSkeleton.tsx
frontend/src/components/footer/: page.tsx
frontend/src/components/layout/: FirstVisitModal.tsx  (+1 more)
frontend/src/hooks/: use-PWA-Install.tsx  use-all-noticias.tsx  use-bairro-news.tsx  use-bairro-noticias.tsx  use-latest-news.tsx  use-noticias.tsx  use-search-noticias.tsx  useNewsByBairro.tsx
frontend/src/lib/: constants.ts  queryClient.tsx
frontend/src/styles/: globals.css  theme.ts
frontend/src/types/: noticia.ts
noticia/: Cargo.toml
scraper/: Cargo.toml
scraper/src/: lib.rs
scraper/src/utils/: sites.rs
(+53 files in other folders)
