[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
scraper = {path = "../scraper"}
db = {path = "../db"}
chrono = "0.4.40"
tokio = { version = "1", features = ["full"] }
axum = "0.8.4"
dotenvy = "0.15.7"
serde_json = "1.0.140"
serde = "1.0.219"
mysql = {version = "26.0.0", features = ["chrono"]}
tower-http = {version = "0.6.2", features = ["cors"]}